syntax = "proto3";

import "github.com/15mga/kiwi_tool/kiwi.proto";

package pb;
option go_package = "/pb";
option csharp_namespace = "Pb";
option (kiwi.svc) = {
  name:"gate",
};

//心跳
message GateHeartbeatReq {
  option (kiwi.method) = 0;
  option (kiwi.role) = "guest";
  option (kiwi.role) = "player";
  option (kiwi.role) = "ops";
  int64 reqTs = 1;
}

message GateHeartbeatRes {
  option (kiwi.method) = 1;
  int64 reqTs = 1;
  int64 resTs = 2;
}

//错误推送
message GateErrPus {
  option (kiwi.method) = 2;
  int32 msgCode = 1; //响应消息协议号
  int32 errCode = 2; //配置表
}

//重复链接推送
message GateRepeatPus {
  option (kiwi.method) = 3;
}

//上传图片
message GateUploadFileReq {
  option (kiwi.method) = 4;
  option (kiwi.role) = "player";
  option (kiwi.role) = "ops";
  string type = 1; //poster:海报 公告:announcement 亲友圈:group 头像:avatar
  string fileExt = 2; //文件后缀 .jpg, .png
  string data = 3; //文件数据
}

message GateUploadFileRes {
  option (kiwi.method) = 5;
  string url = 1; //文件服务器地址
}

message GateUploadWithTokenReq {
  option (kiwi.method) = 6;
  option (kiwi.role) = "guest";
  string type = 1; //poster:海报 公告:announcement 亲友圈:group 头像:avatar
  string fileExt = 2; //文件后缀 .jpg, .png
  string data = 3; //文件数据
  string token = 4; //
}

message GateUploadWithTokenRes {
  option (kiwi.method) = 7;
  string url = 1; //文件服务器地址
}

message GateUploadWithTokenPus {
  option (kiwi.method) = 8;
  string url = 1; //文件服务器地址
}