syntax = "proto3";

import "github.com/15mga/kiwi_tool/kiwi.proto";

package pb;
option go_package = "/pb";
option csharp_namespace = "Pb";
option (kiwi.svc) = {
  name:"user",
};

enum OnlineState {
  Disconnected = 0; //离线
  Connected = 1; //在线
}

message User {
  option (kiwi.schema) = true;
  string id = 1 [(kiwi.cache)=true];
  string password = 2;
  int64 roleMask = 3; //角色组遮罩
  bool ban = 4; //禁用
  string nick = 5 [(kiwi.cache)=true]; //昵称
  string addr = 6; //地址
  string idCard = 7; //身份证
  string realName = 8; //实名
  string mobile = 9 [(kiwi.cache)=true]; //手机号
  int64 signUpTime = 10; //注册时间
  int64 lastSignInTime = 11; //最后登录时间
  string lastSignInIp = 12; //最后登录地址
  int64 lastOfflineTime = 13; //最后下线时间
  string lastOs = 14; //最后登录使用的系统
  OnlineState state = 15; //状态
  string avatar = 16; //头像地址
  string wechatUnionId = 17 [(kiwi.cache)=true]; //微信联合 id
  string token = 18 [(kiwi.cache)=true]; //token
  bytes head = 19; //会话
  int64 onlineDur = 20; //在线时长
  repeated bool testBool = 30;
  repeated int32 testI32 = 31;
  repeated string testString = 32;
  Test testData = 33;
  repeated Test testData2 = 34;
  option (kiwi.idx) = {
    fields:[
      {
        name: "ban"
      }
    ]
  };
  option (kiwi.idx) = {
    fields:[
      {
        name: "sign_up_time"
      }
    ]
  };
  option (kiwi.idx) = {
    fields:[
      {
        name: "last_sign_in_time"
      }
    ]
  };
  option (kiwi.idx) = {
    fields:[
      {
        name: "last_sign_in_ip"
      }
    ]
  };
  option (kiwi.idx) = {
    fields:[
      {
        name: "state"
      }
    ]
  };
}

message Test {
  string name = 1;
  int32 age = 2;
}